--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -28,7 +28,7 @@
 <header>
   <nav class="navbar navbar-expand-lg neumorphic">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="home-tab2">
         <img src="static\img\lanzytech.png" alt="lanzyTECH" height="80px">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -179,7 +179,7 @@
   </div>
 </section>
 
-<section id="contact"py-5">
+<section id="contact-tab2"py-5">
   <div class="container">
     <div class="row">
       <div class="col-md-6 mx-auto">
@@ -205,7 +205,7 @@
   </div>
 </section>
 
-    <section id="about" class="py-5">
+    <section id="profile-tab2" class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
