--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -26,30 +26,33 @@
 
 <body>
 <header>
-  <nav class="navbar navbar-expand-lg neumorphic">
-    <div class="container">
-      <a class="navbar-brand" href="home-tab2">
-        <img src="static\img\lanzytech.png" alt="lanzyTECH" height="80px">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist" style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
-          <li class="nav-item" role="presentation">
-            <button class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab" type="button" role="tab" aria-selected="true">Home</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab" aria-selected="false">Profile</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab" aria-selected="false">Contact</button>
-          </li>
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg neumorphic">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      <img src="static\img\lanzytech.png" alt="lanzyTECH" height="80px">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist" style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
+        <li class="nav-item" role="presentation">
+          <a class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab" href="#home" role="tab" aria-selected="true">Home</a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" href="#profile" role="tab" aria-selected="false">Profile</a>
+        </li>
+         <li class="nav-item" role="presentation">
+          <a class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" href="#services" role="tab" aria-selected="false">Contact</a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" href="#contact" role="tab" aria-selected="false">Contact</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 </header>
 
 
@@ -179,7 +182,7 @@
   </div>
 </section>
 
-<section id="contact-tab2"py-5">
+<section id="contact"py-5">
   <div class="container">
     <div class="row">
       <div class="col-md-6 mx-auto">
@@ -205,7 +208,7 @@
   </div>
 </section>
 
-    <section id="profile-tab2" class="py-5">
+    <section id="profile" class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
