--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -44,7 +44,7 @@
           <a class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" href="#profile" role="tab" aria-selected="false">Profile</a>
         </li>
          <li class="nav-item" role="presentation">
-          <a class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" href="#services" role="tab" aria-selected="false">Contact</a>
+          <a class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" href="#services" role="tab" aria-selected="false">Services</a>
         </li>
         <li class="nav-item" role="presentation">
           <a class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" href="#contact" role="tab" aria-selected="false">Contact</a>
