--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -8,7 +8,7 @@
   <title>lanzytech | Web Dev | Computer Repair Services</title>
   <meta name="description" content="Welcome to lanzytech! We provide web development and computer repair services.">
   <meta name="keywords" content="lanzytech, web development, computer repair services">
-  <link rel="icon" type="image/x-icon" href="static\img\lanzytech.png">
+  <link rel="icon" type="image/x-icon" href="{% static 'img/lanzytech.png' %}">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
@@ -17,7 +17,7 @@
 
   <style>
     body {
-      background-image: url("static/img/background.jpg");
+      background-image: url("{% static 'img/background.jpg' %}");
       background-repeat: no-repeat;
       background-size: cover;
     }
@@ -29,7 +29,7 @@
 <nav class="navbar navbar-expand-lg neumorphic">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="static\img\lanzytech.png" alt="lanzyTECH" height="80px">
+      <img src="{% static 'img/lanzytech.png' %}" alt="lanzyTECH" height="80px">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -118,13 +118,13 @@
             <div id="webDevCarousel" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="static/img/webtech/web1.jpg" class="d-block w-100" alt="Web Development 1">
+                  <img src="{% static 'img/webtech/web1.jpg' %}" class="d-block w-100" alt="Web Development 1">
                 </div>
                 <div class="carousel-item">
-                  <img src="static/img/webtech/web2.jpg" class="d-block w-100" alt="Web Development 2">
+                  <img src="{% static 'img/webtech/web2.jpg' %}" class="d-block w-100" alt="Web Development 2">
                 </div>
                 <div class="carousel-item">
-                  <img src="static/img/webtech/web3.jpg" class="d-block w-100" alt="Web Development 3">
+                  <img src="{% static 'img/webtech/web3.jpg' %}" class="d-block w-100" alt="Web Development 3">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#webDevCarousel" data-bs-slide="prev">
@@ -148,22 +148,22 @@
             <div id="compTechCarousel" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="static/img/comtech/comtech1.jpg" class="d-block w-100" alt="Computer Technician 1">
+                  <img src="{% static 'img/comtech/comtech1.jpg' %}" class="d-block w-100" alt="Computer Technician 1">
                 </div>
                 <div class="carousel-item">
-                  <img src="static/img/comtech/comtech2.jpg" class="d-block w-100" alt="Computer Technician 2">
+                  <img src="{% static 'img/comtech/comtech2.jpg' %}" class="d-block w-100" alt="Computer Technician 2">
                 </div>
                 <div class="carousel-item">
-                  <img src="static/img/comtech/comtech3.jpg" class="d-block w-100" alt="Computer Technician 3">
+                  <img src="{% static 'img/comtech/comtech3.jpg' %}" class="d-block w-100" alt="Computer Technician 3">
                 </div>
                 <div class="carousel-item">
-                  <img src="static/img/comtech/comtech4.jpg" class="d-block w-100" alt="Computer Technician 3">
+                  <img src="{% static 'img/comtech/comtech4.jpg' %}" class="d-block w-100" alt="Computer Technician 3">
                 </div>
                 <div class="carousel-item">
-                  <img src="static/img/comtech/comtech5.jpg" class="d-block w-100" alt="Computer Technician 3">
+                  <img src="{% static 'img/comtech/comtech5.jpg' %}" class="d-block w-100" alt="Computer Technician 3">
                 </div>
                 <div class="carousel-item">
-                  <img src="static/img/comtech/comtech6.jpg" class="d-block w-100" alt="Computer Technician 3">
+                  <img src="{% static 'img/comtech/comtech6.jpg' %}" class="d-block w-100" alt="Computer Technician 3">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#compTechCarousel" data-bs-slide="prev">
@@ -182,7 +182,7 @@
   </div>
 </section>
 
-<section id="contact"py-5">
+<section id="contact" class="py-5">
   <div class="container">
     <div class="row">
       <div class="col-md-6 mx-auto">
@@ -191,12 +191,12 @@
             <h2 class="card-title text-center mb-4">Contact Me</h2>
             <div class="contact-info">
               <div class="contact-item">
-                <img src="static/img/icons/call.svg" alt="Contact Icon" height="24px" class="contact-icon">
+                <img src="{% static 'img/icons/call.svg' %}" alt="Contact Icon" height="24px" class="contact-icon">
                 <span class="contact-label">Mobile:</span>
                 <a href="tel:09456922740" class="contact-link">0945-6922-740</a>
               </div>
               <div class="contact-item">
-                <img src="static/img/icons/fb.svg" alt="Facebook Icon" height="24px" class="contact-icon">
+                <img src="{% static 'img/icons/fb.svg' %}" alt="Facebook Icon" height="24px" class="contact-icon">
                 <span class="contact-label">Facebook:</span>
                 <a href="https://facebook.com/lanzgerlan" target="_blank" class="contact-link">facebook.com/lanzgerlan</a>
               </div>
@@ -208,21 +208,21 @@
   </div>
 </section>
 
-    <section id="profile" class="py-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <h2 class="mb-4 text-white">About Me</h2>
-            <p class="text-white">Hello! My name is Gerlan Dorona and I am a passionate web developer and computer repair technician. I have a strong background in Python Django and extensive experience in creating modern and responsive websites.</p>
-            <p class="text-white">I believe in the power of technology to transform businesses and improve lives. With my skills and expertise, I strive to provide high-quality web development solutions that meet the unique needs of my clients.</p>
-            <p class="text-white">In addition to web development, I have a deep understanding of computer hardware and software, allowing me to offer comprehensive computer repair and troubleshooting services. I can help diagnose and resolve various issues, ensuring that your computer runs smoothly and efficiently.</p>
-          </div>
-          <div class="col-md-6">
-            <img src="static/img/about/me.jpg" class="img-fluid rounded-circle" alt="About Me">
-          </div>
-        </div>
+<section id="profile" class="py-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h2 class="mb-4 text-white">About Me</h2>
+        <p class="text-white">Hello! My name is Gerlan Dorona and I am a passionate web developer and computer repair technician. I have a strong background in Python Django and extensive experience in creating modern and responsive websites.</p>
+        <p class="text-white">I believe in the power of technology to transform businesses and improve lives. With my skills and expertise, I strive to provide high-quality web development solutions that meet the unique needs of my clients.</p>
+        <p class="text-white">In addition to web development, I have a deep understanding of computer hardware and software, allowing me to offer comprehensive computer repair and troubleshooting services. I can help diagnose and resolve various issues, ensuring that your computer runs smoothly and efficiently.</p>
       </div>
-    </section>
+      <div class="col-md-6">
+        <img src="{% static 'img/about/me.jpg' %}" class="img-fluid rounded-circle" alt="About Me">
+      </div>
+    </div>
+  </div>
+</section>
     
   </main>
 
@@ -234,7 +234,8 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>  $(document).ready(function () {
+  <script>  
+  $(document).ready(function () {
     // Add smooth scrolling to anchor links
     $("a").on('click', function (event) {
       if (this.hash !== "") {
@@ -247,8 +248,8 @@
         });
       }
     });
-  });</script>
-    // Add smooth scrolling to anchor lin
+  });
+  </script>
   <!-- Add your custom JS scripts here -->
 </body>
 
