--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -44,7 +44,7 @@
           <a class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" href="#profile" role="tab" aria-selected="false">Profile</a>
         </li>
          <li class="nav-item" role="presentation">
-          <a class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" href="#services" role="tab" aria-selected="false">Services</a>
+          <a class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" href="#services-gallery" role="tab" aria-selected="false">Services</a>
         </li>
         <li class="nav-item" role="presentation">
           <a class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" href="#contact" role="tab" aria-selected="false">Contact</a>
@@ -67,7 +67,7 @@
       </div>
     </section>
 
-    <section id="services" class="py-5">
+    <section id="#services-gallery" class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -108,7 +108,7 @@
       </div>
     </section>
 
-    <section id="services-gallery" class="py-5">
+    <section id="#services-gallery" class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -184,7 +184,7 @@
       </div>
     </section>
 
-    <section id="contact" class="py-5">
+    <section id="#contact" class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6 mx-auto">
@@ -210,7 +210,7 @@
       </div>
     </section>
 
-    <section id="profile" class="py-5">
+    <section id="#profile" class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
