--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -36,20 +36,21 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist" style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
-        <li class="nav-item" role="presentation">
-          <a class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab" href="#home" role="tab" aria-selected="true">Home</a>
-        </li>
-        <li class="nav-item" role="presentation">
-          <a class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" href="#profile" role="tab" aria-selected="false">Profile</a>
-        </li>
-         <li class="nav-item" role="presentation">
-          <a class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" href="#services-gallery" role="tab" aria-selected="false">Services</a>
-        </li>
-        <li class="nav-item" role="presentation">
-          <a class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" href="#contact" role="tab" aria-selected="false">Contact</a>
-        </li>
-      </ul>
+<ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist">
+  <li class="nav-item" role="presentation">
+    <a class="nav-link active rounded-5" href="#home">Home</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link rounded-5" href="#profile">Profile</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link rounded-5" href="#services">Services</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link rounded-5" href="#contact">Contact</a>
+  </li>
+</ul>
+
     </div>
   </div>
 </nav>
