--- a/myapp/templates/landing_page.html
+++ b/myapp/templates/landing_page.html
@@ -68,7 +68,7 @@
       </div>
     </section>
 
-    <section id="#services-gallery" class="py-5">
+    <section id="services-gallery" class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -109,7 +109,7 @@
       </div>
     </section>
 
-    <section id="#services-gallery" class="py-5">
+    <section id="services-gallery" class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -185,7 +185,7 @@
       </div>
     </section>
 
-    <section id="#contact" class="py-5">
+    <section id="contact" class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6 mx-auto">
@@ -211,7 +211,7 @@
       </div>
     </section>
 
-    <section id="#profile" class="py-5">
+    <section id="profile" class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
